[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guavahash"
version = "1.0.1"
description = "Google's Guava consistent hashing implementation"
readme = "README.md"
license = "MIT"
authors = [
    { name = "igorcoding", email = "igorcoding@gmail.com" }
]
keywords = ["guava", "consistent", "hashing", "hash", "digest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=3.0"]

[project.urls]
Homepage = "https://github.com/igorcoding/guavahash"
Repository = "https://github.com/igorcoding/guavahash"
Download = "https://github.com/igorcoding/guavahash/tarball/v0.4"

[tool.setuptools]
include-package-data = true
ext-modules = [
    { name = "guavahash", sources = ["src/guava.c"], include-dirs = ["."], language = "c" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["guavahash*"]