[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "guavahash"
version = "1.0.2"
description = "Google's Guava consistent hashing implementation"
readme = "README.md"
license = "MIT"
authors = [
    { name = "igorcoding", email = "igorcoding@gmail.com" }
]
keywords = ["guava", "consistent", "hashing", "hash", "digest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=3.0"]

[project.urls]
Homepage = "https://github.com/igorcoding/guavahash"
Repository = "https://github.com/igorcoding/guavahash"
Download = "https://github.com/igorcoding/guavahash/tarball/v0.4"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.8.6",
    "ruff>=0.1.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
